--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Bronco matching tool." />
+    <meta name="description" content="Bronco Challenge Matching Tool." />
 
     <link
       rel="apple-touch-icon"
@@ -39,7 +39,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Bronco matching tool.</title>
+    <title>Bronco Challenge Matching Tool.</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
